<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorFondo"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura"
        android:layout_weight="1"
        android:layout_marginBottom="25dp"
        android:background="@color/colorFondoElemento"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/titulo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tecleaTitulo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura"
        android:layout_weight="1"
        android:layout_marginBottom="25dp"
        android:background="@color/colorFondoElemento"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/autor"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tecleaAutor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura"
        android:layout_weight="2"
        android:layout_marginBottom="25dp"
        android:background="@color/colorFondoElemento"
        android:padding="5dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/libro"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tema" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbTecnico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:checked="true"
                    android:text="@string/tecnico"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbLectura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectura"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:paddingBottom="5dp"
        android:background="@color/colorFondoElemento"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traducido" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/ingles" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frances" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/aceptar"/>
</LinearLayout>